updated notebook and yaml config file for demo part 3

--- a/demo/3-rayleigh_solver_app/config.yml
+++ b/demo/3-rayleigh_solver_app/config.yml
@@ -6,8 +6,8 @@ surface:
   reflectance: 0.35  # dimensionless
 atmosphere:
   type: rayleigh_homogeneous
-  height: 100  # km
-  width: 10000  # km
+  height: 100.  # km
+  width: 10000.  # km
   sigma_s_params:
     refractive_index: 1.0003  # dimensionless
 illumination:
@@ -17,6 +17,6 @@ illumination:
   irradiance: 1.8e+6  # W/km^2/nm
 measure:
   type: hemispherical
-  spp: 32000
+  spp: 32000  # dimensionless
   zenith_res: 10.  # deg
   azimuth_res: 20.  # deg
