--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = dvc-origin
 ['remote "dvc-origin"']
     url = s3://eradiate-data
+['remote "dvc-public"']
+    url = https://eradiate-data.s3.amazonaws.com
