--- a/spectra/solar_irradiance/.gitignore
+++ b/spectra/solar_irradiance/.gitignore
@@ -1,1 +1,7 @@
 /thuillier_2003.nc
+/blackbody_sun.nc
+/meftah_2017.nc
+/solid_2017_mean.nc
+/whi_2008_time_period_1.nc
+/whi_2008_time_period_2.nc
+/whi_2008_time_period_3.nc
