Updated download targets

--- a/downloads/files.yml
+++ b/downloads/files.yml
@@ -1,4 +1,4 @@
+1nm.zip: ckd/absorption
 10nm.zip: ckd/absorption
-10nm_test.zip: ckd/absorption
 solid_2017.zip: spectra/solar_irradiance
 us76_u86_4-spectra.zip: spectra/absorption
