--- a/registry_rules.yml
+++ b/registry_rules.yml
@@ -7,6 +7,7 @@ include:
   - "spectra/**/*.nc"
   - "tests/**/*.nc"
   - "tests/**/*.def"
+  - "textures/**/*.bmp"
   - "thermoprops/**/*.nc"
 
 exclude:
