--- a/registry_rules.yml
+++ b/registry_rules.yml
@@ -9,6 +9,7 @@ include:
   - "tests/**/*.def"
   - "textures/**/*.bmp"
   - "thermoprops/**/*.nc"
+  - "trees/**/*.*"
 
 exclude:
   - "**/.DS_Store"
