--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   hooks:
   - id: update-registry
     name: Update registry
-    entry: ertdata make-registry
+    entry: eradiate data make-registry
     language: system
     always_run: true
     pass_filenames: false
